Reestructuracion de la App para el correcto funcionamiento de la Api y la Base de Datos