@@ -34,17 +34,6 @@ android {
         resources {
             excludes += "/META-INF/{AL2.0,LGPL2.1}"
             excludes += "META-INF/gradle/incremental.annotation.processors"
-            excludes += "META-INF/LICENSE.md"
-            excludes += "META-INF/LICENSE-notice.md"
-        }
-    }
-
-    testOptions {
-        unitTests {
-            isReturnDefaultValues = true
-            all {
-                it.jvmArgs("-XX:+EnableDynamicAgentLoading")
-            }
         }
     }
 
@@ -154,8 +143,8 @@ dependencies {
     testImplementation("org.jetbrains.kotlinx:kotlinx-coroutines-test:1.9.0")
 
     // Testing MockK (mocking framework)
-    testImplementation(libs.mockk)
-    androidTestImplementation(libs.mockk.android)
+    testImplementation("libs.mockk")
+    androidTestImplementation("libs.mockk.android")
 
     // Testing Turbine
     testImplementation("app.cash.turbine:turbine:1.0.0")
@@ -166,6 +155,10 @@ dependencies {
     //Android Testing
     androidTestImplementation("androidx.compose.ui:ui-test-junit4")
     androidTestImplementation("androidx.test.espresso:espresso-core:3.5.1")
+
+    tasks.withType<Test>().configureEach {
+        useJUnitPlatform()
+    }
 }
 
 kapt {
